Check corsConfigurationEnabled when adding cors config to service.bal

--- a/distribution/resources/cli-conf/toolkit-config.toml
+++ b/distribution/resources/cli-conf/toolkit-config.toml
@@ -13,7 +13,7 @@ trustStoreLocation = ""
 trustStorePassword = ""
 
 [corsConfiguration]
-corsConfigurationEnabled = false
+corsConfigurationEnabled = true
 accessControlAllowCredentials = false
 accessControlAllowOrigins = ["*"]
 accessControlAllowHeaders = ["authorization", "Access-Control-Allow-Origin", "Content-Type", "SOAPAction"]
